<resources>
    <string name="app_name">MyNotes</string>
    <string name="hint_title">Заголовок</string>
    <string name="hint_text">Текст</string>
    <string name="choose_image">Выбор изображения</string>
    <string name="new_note">Новая заметка</string>
    <string name="add_new_note">Пусто</string>
    <string name="make_photo">Сделать фото</string>
    <string name="from_gallery">Выбрать из галереи</string>
    <string name="delete_note">Удалить запись?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">OK</string>
    <string name="fill_the_field">Заполните заголовок!</string>
    <string name="note_deleted">Заметка удалена!</string>
    <string name="cancel">Отменить</string>
    <string name="action">action</string>
    <string name="bottom_sheet_action">bottom_sheet_action</string>
    <string name="selected_color">selectedColor</string>
    <string name="blue">Blue</string>
    <string name="cyan">Cyan</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="dark">Dark</string>
    <string name="indigo">Indigo</string>
    <string name="save_button">save button</string>
    <string name="action_button">add action</string>
    <string name="add_picture_button">add picture button</string>
    <string name="note_image">note image</string>
    <string name="edit_image_button">edit image button</string>
    <string name="delete_image_button">delete image button</string>
    <string name="pick_color_button">pick color button</string>
    <string name="add_speech_button">add speech button</string>
    <string name="add_reminder_button">add reminder</string>
    <string name="share_button">share button</string>
    <string name="add_new_note_button">add new note button</string>
    <string name="add_image">Добавить фото</string>
    <string name="add_color">Добавить цвет</string>
    <string name="add_speech">Добавить голосом</string>
    <string name="add_reminder">Добавить напоминание</string>
    <string name="share">Поделиться</string>
    <string name="image_is_there">image is there</string>
    <string name="play_text">play text</string>
    <string name="save_changes">Сохранить изменения?</string>
    <string name="speak">Говорите</string>
    <string name="description_is_empty">Описание не заполнено!</string>
    <string name="unsupported_language">Извините, этот язык не поддерживается</string>
    <string name="error">Ошибка!</string>
    <string name="main_greetings">Приветствуем!</string>
    <string name="main_greetings_text">- Чтобы добавить заметку нажмите \"+\".\n\n- Удалить заметку - свайпните влево.\n\n- Пометить заметку выполненной - свайпните вправо.\n\n- В открытой заметке вы можете добавить цвет, изображение, напоминание, набрать текст голосом, а также поделиться информацией.\n\n- Вы можете увеличить изображение, растянув его.\n\n- Приятного пользования!</string>
    <string name="grant_files_permission">Для работы с изображениями разрешите приложению доступ к файлам.</string>
    <string name="grant_notify_permission">Разрешите приложению использовать уведомления.</string>
    <string name="created">"Дата создания: "</string>
    <string name="completed">"Дата выполнения: "</string>
    <string name="image_done">image done</string>
    <string name="mark_completed">Пометить выполненным?</string>
    <string name="mark_uncompleted">Пометить невыполненным?</string>
    <string name="complete_by">"Выполнить до: "</string>
    <string name="unfinished_task">У вас невыполненная задача!</string>
    <string name="go">Перейти</string>
    <string name="warning">warning</string>
    <string name="notification_channel" translatable="false">Notification Channel</string>
    <string name="notification_contains" translatable="false">This notification contains important announcement</string>

</resources>