<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/main_theme"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/tvNewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@android:drawable/editbox_background"
        android:text="@string/new_note"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCompleteBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:text="@string/new_note"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNewNote"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/hint_title"
        android:inputType="textMultiLine"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="12dp"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLayout"/>

    <EditText
        android:id="@+id/edDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:gravity="top|start"
        android:hint="@string/hint_text"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edTitle"
        app:layout_constraintStart_toStartOf="@+id/edTitle"
        app:layout_constraintTop_toBottomOf="@+id/edTitle"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/save_button"
        android:foreground="@drawable/ic_save_note"
        app:backgroundTint="@color/icon_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAddColor"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/pick_color_button"
        android:foreground="@drawable/ic_pick_color"
        android:visibility="gone"
        app:backgroundTint="@color/icon_background"
        app:layout_constraintBottom_toTopOf="@id/fbAddImage"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAddImage"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/add_picture_button"
        android:foreground="@drawable/ic_add_photo_foreground"
        android:visibility="gone"
        app:backgroundTint="@color/icon_background"
        app:layout_constraintBottom_toTopOf="@+id/fbAddSpeech"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAddSpeech"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/add_speech_button"
        android:foreground="@drawable/ic_add_speech"
        android:visibility="gone"
        app:backgroundTint="@color/icon_background"
        app:layout_constraintBottom_toTopOf="@+id/fbAddReminder"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAddReminder"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/add_speech_button"
        android:foreground="@drawable/ic_add_reminder"
        android:visibility="gone"
        app:backgroundTint="@color/icon_background"
        app:layout_constraintBottom_toTopOf="@+id/fbShare"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbShare"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/share_button"
        android:foreground="@drawable/ic_share"
        android:visibility="gone"
        app:backgroundTint="@color/icon_background"
        app:layout_constraintBottom_toTopOf="@+id/fbAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/edit_frag_theme" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fbAction"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/icon_background"
        android:contentDescription="@string/action_button"
        android:foreground="@drawable/ic_add_note_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/ibPlay"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/notes_color_dark"
        android:backgroundTint="@color/icon_background"
        android:contentDescription="@string/play_text"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fbAction"
        app:layout_constraintStart_toEndOf="@id/fbSave"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_image"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/fbAddImage"
        app:layout_constraintEnd_toStartOf="@id/fbAddImage"
        app:layout_constraintTop_toTopOf="@id/fbAddImage" />

    <TextView
        android:id="@+id/tvAddColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/fbAddColor"
        app:layout_constraintEnd_toStartOf="@id/fbAddColor"
        app:layout_constraintTop_toTopOf="@id/fbAddColor" />

    <TextView
        android:id="@+id/tvAddSpeech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_speech"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/fbAddSpeech"
        app:layout_constraintEnd_toStartOf="@id/fbAddSpeech"
        app:layout_constraintTop_toTopOf="@id/fbAddSpeech" />

    <TextView
        android:id="@+id/tvAddReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_reminder"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/fbAddReminder"
        app:layout_constraintEnd_toStartOf="@id/fbAddReminder"
        app:layout_constraintTop_toTopOf="@id/fbAddReminder" />

    <TextView
        android:id="@+id/tvShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/share"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/fbShare"
        app:layout_constraintEnd_toStartOf="@id/fbShare"
        app:layout_constraintTop_toTopOf="@id/fbShare" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@android:drawable/editbox_background"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCompleteBy"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imMain"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:drawable/editbox_background"
            android:contentDescription="@string/note_image"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/ibDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/delete_image_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_delete"/>

        <ImageButton
            android:id="@+id/ibEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/delete_image_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>